--- a/sass/accueil.scss
+++ b/sass/accueil.scss
@@ -17,13 +17,14 @@
 	.container {
 		padding-top: 72px;
 	}
-	h1 {
+	h1,&__titre {
 		margin: 0 0 10px 0;
 		font-size: 48px;
 		font-weight: 700;
 		line-height: 56px;
 		color: #fff;
 	}
+	
 	h2 {
 		color: rgba(255, 255, 255, 0.6);
 		margin-bottom: 50px;
