--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -412,8 +412,9 @@ section {
 .accueil .container {
   padding-top: 72px;
 }
-.accueil h1 {
+.accueil h1, .accueil__titre {
   margin: 0 0 10px 0;
+  font-family: "Jost", sans-serif;
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
@@ -520,8 +521,8 @@ section {
 /*--------------------------------------------------------------
   # Services
   --------------------------------------------------------------*/
-.services .row {
-  margin-bottom: 15px;
+.services .col-xl-3 {
+  margin: 15px;
 }
 .services .icon-box {
   box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
@@ -589,7 +590,7 @@ section {
   color: #fff;
 }
 .portfolio .portfolio-item {
-  margin-bottom: 30px;
+  margin: 15px 0;
 }
 .portfolio .portfolio-item .portfolio-img {
   overflow: hidden;
@@ -875,53 +876,6 @@ section {
 #footer {
   font-size: 14px;
   background: #37517e;
-}
-#footer .footer-newsletter {
-  padding: 50px 0;
-  background: #f3f5fa;
-  text-align: center;
-  font-size: 15px;
-  color: #444444;
-}
-#footer .footer-newsletter h4 {
-  font-size: 24px;
-  margin: 0 0 20px 0;
-  padding: 0;
-  line-height: 1;
-  font-weight: 600;
-  color: #37517e;
-}
-#footer .footer-newsletter form {
-  margin-top: 30px;
-  background: #fff;
-  padding: 6px 10px;
-  position: relative;
-  border-radius: 50px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.06);
-  text-align: left;
-}
-#footer .footer-newsletter form input[type=email] {
-  border: 0;
-  padding: 4px 8px;
-  width: calc(100% - 100px);
-}
-#footer .footer-newsletter form input[type=submit] {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  border: 0;
-  background: none;
-  font-size: 16px;
-  padding: 0 20px;
-  background: #47b2e4;
-  color: #fff;
-  transition: 0.3s;
-  border-radius: 50px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-}
-#footer .footer-newsletter form input[type=submit]:hover {
-  background: #209dd8;
 }
 #footer .footer-top {
   padding: 60px 0 30px 0;
