--- a/sass/accueil.scss
+++ b/sass/accueil.scss
@@ -17,13 +17,15 @@
 	.container {
 		padding-top: 72px;
 	}
-	h1,&__titre {
+	h1, &__titre {
 		margin: 0 0 10px 0;
+		font-family: "Jost", sans-serif;
 		font-size: 48px;
 		font-weight: 700;
 		line-height: 56px;
 		color: #fff;
 	}
+	
 	
 	h2 {
 		color: rgba(255, 255, 255, 0.6);
