--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -521,8 +521,11 @@ section {
 /*--------------------------------------------------------------
   # Services
   --------------------------------------------------------------*/
-.services .col-xl-3 {
-  margin: 15px;
+/*--------------------------------------------------------------
+  # Services
+  --------------------------------------------------------------*/
+.services .row {
+  margin-bottom: 15px;
 }
 .services .icon-box {
   box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
