--- a/sass/services.scss
+++ b/sass/services.scss
@@ -1,45 +1,48 @@
 /*--------------------------------------------------------------
   # Services
   --------------------------------------------------------------*/
+/*--------------------------------------------------------------
+  # Services
+  --------------------------------------------------------------*/
   .services {
-      .col-xl-3{
-        margin: 15px;
-      }
-	.icon-box {
-		box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
-		padding: 50px 30px;
-		transition: all ease-in-out 0.4s;
-		background: #fff;
-        cursor: pointer;
-		.icon {
-			margin-bottom: 10px;
-			i {
-				color: #47b2e4;
-				font-size: 36px;
-				transition: 0.3s;
-			}
-		}
-		h4 {
-			font-weight: 500;
-			margin-bottom: 15px;
-			font-size: 24px;
-			a {
-				color: #37517e;
-				transition: ease-in-out 0.3s;
-			}
-		}
-		p {
-			line-height: 24px;
-			font-size: 14px;
-			margin-bottom: 0;
-		}
-		&:hover {
-			transform: translateY(-10px);
-			h4 {
-				a {
-					color: #47b2e4;
-				}
-			}
-		}
+	.row{
+	  margin-bottom: 15px;
+	}
+  .icon-box {
+	  box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
+	  padding: 50px 30px;
+	  transition: all ease-in-out 0.4s;
+	  background: #fff;
+	  cursor: pointer;
+	  .icon {
+		  margin-bottom: 10px;
+		  i {
+			  color: #47b2e4;
+			  font-size: 36px;
+			  transition: 0.3s;
+		  }
+	  }
+	  h4 {
+		  font-weight: 500;
+		  margin-bottom: 15px;
+		  font-size: 24px;
+		  a {
+			  color: #37517e;
+			  transition: ease-in-out 0.3s;
+		  }
+	  }
+	  p {
+		  line-height: 24px;
+		  font-size: 14px;
+		  margin-bottom: 0;
+	  }
+	  &:hover {
+		  transform: translateY(-10px);
+		  h4 {
+			  a {
+				  color: #47b2e4;
+			  }
+		  }
+	  }
 	}
 }
